--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: Arial, sans-serif;
+}
 nav{
     width: 100%;
     height: 60px;
@@ -16,8 +19,48 @@ nav{
 }
 .menu li{
     float: left;
-    line-height: 30px;
+    line-height: 60px;
     color: #fff;
-    
-    
+    margin-right: 40px;
+    font-size: 16px;
+    text-transform: uppercase
 }
+.main{
+    width: 100%;
+    height: calc(100% - 60px);
+    background: url(../img/boy.png) 90% 100%/auto 85% no-repeat , url(../img/bg.jpg) center/cover no-repeat;
+}
+.title_container{
+    float: left;
+    margin: 432px 0px 0px 404px;
+    color: #2c384a;
+    text-align: center;
+}
+.title_container h1{
+    font-size: 60px; 
+    font-weight: bold;
+}
+.title_container h4{
+    margin-top: 40px;
+    font-size: 22px;
+    color: #79818c;
+}
+.title_container input{
+    height: 40px;
+    text-align: center;
+    border: 2px solid #6d7682;
+    background: none; 
+    border-radius: 5px;
+    color: #6d7682;
+    font-size: 15px;
+    padding: 0px 16px; 
+    margin: 58px 14px 0px 14px; 
+}
+div p{
+    text-align: center;
+    margin: auto;
+    font-size: 24px;
+    padding: 108px;
+}
+
+    
